# cfg-optimizer

./: .gitignore  README.md
dashboard/: app.py
dashboard/static/: style.css
dashboard/templates/: index.html
datasets/: hello.c  insersionsort.c  kadanesalgo.c  mergesort.c  quicksort.c  test_allphase.c  test_constants.c  test_deadcode.c  test_reaching.c  test_unreachable.c  testfile.c  testfile1.c  testphase2.c
phase1/: CMakeLists.txt  cfg_extractor.cpp
phase2/: cfg_extractor.cpp
phase3/: CMakeLists.txt  cfg_extractor.cpp
